discussion/kv_engine/168378/168378_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50286: Handle pre-7.1 CommitSyncWrite metadata

Prior to MB-48033 (Neo), CommittedSyncWrites were stored on-disk as
queue_op::commit_sync_write and V3 metadata. However this was
optimized in MB-48033 to store ad queue_op::mutation and V1 metadata
(as V1 is smaller).

However, we did not fully handle reading existing V3 commit_sync_write
from disk - for example during an offline upgrade. As a consequence
attempting to read such items from disk (for example during warmup)
results in a failure to make an Item:

     CRITICAL (b1) WarmupBackfillTask::run(): caught exception while running backfill - aborting warmup: makeItemFromDocInfo: Invalid queue_op:mutation

This is because while we allow the V3::commit_sync_write to be decoded
from disk in MetaData::MetaDataV3, we transparently convert the Commit
operation to mutation:

    queue_op getDurabilityOp() const {
        switch (operation) {
        ...
        case Operation::Commit:
            return queue_op::mutation;

Logically this is fine, however that falls foul of the logic in
makeItemFromDocInfo() which attempts to extract durabiliuty-related
information from V3 metadata, and doesn't exist to encounter a
queue_op::mutation (as per the above exception).

Address by accepting queue_op::mutation as a valid V3 durability op.

Change-Id: I16d2bd4891e232585630ff97b1052c10541bbfba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-07 14:48:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-07 14:52:47.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36147/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36147/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42654/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4332/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16637/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16637/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16342/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17429/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17429/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15492/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24756/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4388/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4388/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14690/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/mock/mock_couch_kvstore.h:33:13: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
            V2V3Union() {
            ^           ~
                        = default;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14690/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.h:28:10:
error: "spdlog/common.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14690/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13521/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
